src/frontend/homepage/app/styles/main.scss
/*
 * Web Starter Kit
 *
 * Multi-screen layout styles for your page. Brought to you by the
 * Web Starter Kit team.
 *
 */
@import '_h5bp';

/*
 * Visual Style Guide styles
 * Remove if you prefer to use a CSS library, like Bootstrap
 */
@import 'components/components';


html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

p,
ul,
ol {
  font-size: $fontBase;
}

body {
  position: relative;
  min-height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  font-family: $fontHighlight;
  font-size: $fontBase;
  font-weight: 400;
  color: $colorText;
  background-color: white;
  line-height: $lineHeight;

  &.open {
    overflow: hidden;
  }
}

.header {
  flex: 0 0 auto;
}

.menu {
  top: 0;
  left: 0;
  display: inline-block;
  width: 60px;
  height: 60px;
  padding: 0;
  background-image: none;
  background-color: transparent;
  border: none;
  transition: background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
  -webkit-tap-highlight-color: transparent;

  svg {
    fill: $colorText;
  }

  &:hover {
    background-color: rgba(255, 255, 255, 0.1);
  }

  &:focus {
    background-color: rgba(255, 255, 255, 0.2);
    outline: 0;
  }

  &:active {
    background-color: rgba(255, 255, 255, 0.4);
  }
}

.nav {
  top: 0;
  bottom: 0;
  width: 250px;
  height: 100%;
  position: fixed;
  flex: 0 0 auto;
  visibility: hidden;
  background-color: white;
  overflow-y: auto;
  z-index: 4;
  transform: translate(-250px, 0);
  will-change: transform, visibility;

  &.open {
    visibility: visible;
    transform: translate(0, 0);
    transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
  }

  ul {
    padding: 0;
    margin: 0;
    list-style-type: none;

    li {
      border-bottom-style: solid;
      border-width: 1px;
      border-color: white;
      padding: 0;

      &::before {
        content: none;
      }

      a {
        display: block;
        text-decoration: none;
        color: $colorText;
        font-weight: 400;
        white-space: nowrap;
        height: 60px;
        padding: 17px 20px;
        line-height: 1.4;
        transition: background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);

        &:hover {
          background-color: rgba(255, 255, 255, 0.2);
        }

        &:focus {
          background-color: rgba(255, 255, 255, 0.3);
          outline: 0;
        }

        &:active {
          background-color: rgba(255, 255, 255, 0.4);
        }
      }
    }
  }
}

.main-container {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: center;
  flex: 1 0 auto;
  background-color: $colorCyan500;

  &::before {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 140px;
    content: '';
    background-color: white;
  }
}

.main {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 350px;
  margin-top: 60px;
  padding: 16px 16px 16px;

  img {
    border-radius: 50%;
    border: 4px solid white;
    margin-bottom: 20px;
  }

  p {
    font-family: 'Alegreya', serif;
    font-size: 28px;
    color: rgba(255,255,255,0.80);
    text-align: center;
    line-height: 35px;
    margin: 20px 0;
  }

  b {
    color: white;
  }
}

.ui-mask-modal {
  background-color: rgba(0,0,0,0.5);
  height: 100%;
  left: 0;
  opacity: 0.1;
  top: 0;
  visibility: hidden;
  width: 100%;
  z-index: 3;
  position: fixed;
  transition: visibility 0 linear 0.2s, opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
  will-change: opacity, visibility;

  &.ui-mask-visible {
    opacity: 1;
    visibility: visible;
    transition-delay: 0;
  }
}

/** Larger Screens - desktops and tablets **/
@include wide {
  body {
    overflow-y: scroll;
  }

  .menu {
    display: none;
  }

  .nav {
    position: relative;
    width: 100%;
    height: auto;
    display: flex;
    justify-content: flex-end;
    visibility: visible;
    transform: translate(0, 0);
    transition: none;

    ul {
      display: flex;

      li {
        border: none;
      }
    }
  }
}

